--- a/24.-Algoritmia/index.html
+++ b/24.-Algoritmia/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algoritmia</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container" >
@@ -139,5 +140,7 @@
 
 
     </div>
+
+    <script src="js/funciones.js" ></script>
 </body>
 </html>
