--- a/25_Servlet/src/main/webapp/index.html
+++ b/25_Servlet/src/main/webapp/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="css/style.css"/>
+        <script src="js/funciones.js" ></script>  
     </head>
     <body>
         <h1>Ejemplo de Servlet</h1>
@@ -11,6 +13,14 @@
             <label>Nombre: </label>
             <br>
             <input type="text" name="nombre" >
+            <br>
+             <label>Edad: </label>
+            <br>
+            <input type="text" name="edad" >
+            <br>
+             <label>Correo Electronico: </label>
+            <br>
+            <input type="email" name="email" >
             <br>
             <input type="submit" value="Enviar Datos" >
         </form>
