--- a/26_BD/web/index.html
+++ b/26_BD/web/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<!DOCTYPE html>
 <html>
     <head>
         <title>Start Page</title>
@@ -7,7 +13,7 @@
         <script src="js/funciones.js" ></script>  
     </head>
     <body>
-        <h1>Ejemplo de Servlet</h1>
+        <h1>Bienvenido al Registro de Pokemones UTC</h1>
         <br>
         <form name="formulario" method="post" action="Directorio" >
             <label>Nombre: </label>
